# json-inline

./: .gitignore  .travis.yaml  .travis.yml  LICENSE  README.md  VERSION  setup.cfg  tox.ini
src/json_inline/: __init__.py  recursive.py  search.py
src/tests/: test_all.py
