# https://gist.github.com/althonos/6914b896789d3f2078d1e6237642c35c

[metadata]
name = json-inline
version = file: VERSION
author = Aleskandr Sokolov
author_email = bigpewm@gmail.com
url = https://github.com/bigpe/json-inline
description = JSON Low Code - Extract data inline
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
keywords = json, low code, lowcode, fetch, extract, inline
platform = any
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
include_package_data = True
python_requires = >= 3.5.2
setup_requires =
    setuptools
    wheel
package_dir =
    json_inline=src/json_inline
    tests=src/json_inline
packages =
    json_inline
test_suite = tests

[sdist]
formats = gztar

[bdist_wheel]
universal = true

[check]
metadata = true
strict = true

